--- a/style.css
+++ b/style.css
@@ -1,55 +1,31 @@
-/* External CSS */
 body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
 }
 
-header {
-    background-color: #333;
-    color: white;
+h1 {
+    color: blue;
     text-align: center;
-    padding: 20px;
 }
 
-nav {
-    background-color: #555;
-    overflow: hidden;
+p.intro {
+    font-size: 18px;
+    color: #333;
+    line-height: 1.6;
 }
 
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-nav li {
-    float: left;
-}
-
-nav a {
+img {
     display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+a {
+    color: blue;
     text-decoration: none;
-    font-size: 18px;
-    transition: background-color 0.3s, color 0.3s;
 }
 
-nav a:hover {
-    background-color: #008080;
-    color: black;
-}
-
-section {
-    margin: 30px;
-}
-
-footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 20px;
-    font-size: 18px;
+a:hover {
+    color: red;
 }
